--- a/alianzas.html
+++ b/alianzas.html
@@ -96,7 +96,7 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <h4>Restaurante El Buen Gusto</h4>
               <br>
 
               Propietario: STELLA <br>
@@ -111,7 +111,7 @@
               <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
 
               <div class="w-100"></div>
-              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+              <a class="" href="#!">www.facebook.com/#</a>
 
               <div class="w-100"></div>
               <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
@@ -129,10 +129,10 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <h4>Hotel y Restaurante Gabriela Sinisterra</h4>
               <br>
 
-              Propietario: STELLA <br>
+              Propietario: ? <br>
               Ubicación: San Cipriano
 
               <br>
@@ -144,7 +144,7 @@
               <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
 
               <div class="w-100"></div>
-              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+              <a class="" href="#!">www.facebook.com/#</a>
 
               <div class="w-100"></div>
               <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
@@ -162,10 +162,10 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <h4>Hotel y Restaurante David</h4>
               <br>
 
-              Propietario: STELLA <br>
+              Propietario: ? <br>
               Ubicación: San Cipriano
 
               <br>
@@ -177,7 +177,7 @@
               <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
 
               <div class="w-100"></div>
-              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+              <a class="" href="#!">www.facebook.com/#</a>
 
               <div class="w-100"></div>
               <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
@@ -195,10 +195,10 @@
             <div class="w-100"></div>
             <div class="col text-center">
 
-              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <h4>Restaurante las delicias de Magas</h4>
               <br>
 
-              Propietario: STELLA <br>
+              Propietario: ? <br>
               Ubicación: San Cipriano
 
               <br>
@@ -210,7 +210,7 @@
               <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
 
               <div class="w-100"></div>
-              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+              <a class="" href="#!">www.facebook.com/#</a>
 
               <div class="w-100"></div>
               <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
@@ -218,6 +218,342 @@
             </div>
           </div>
         </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Hotel y restaurante Mayesty</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Cabañas y Restaurante Genaro</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Hotel el Edén</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Bebidas y Dulcería Sabor Porteño</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Hotel y restaurante San Cipriano</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Posada Don José</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Hotel Ivankar</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Hotel Ivankar</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Fuente de sodas y restaurante El Sazón de Chilin</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: Córdoba
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Fuente de sodas y restaurante Doña Doris</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: Córdoba
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
 
 
 
