--- a/alianzas.html
+++ b/alianzas.html
@@ -50,28 +50,29 @@
             </nav>
             <nav class="row navbar navbar-expand-lg bg-nav-menu">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                  <i class="fas fa-bars"></i>
-                </span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#nosotros">Guía turística</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="acerca.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="politica.html">Política de Calidad</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
+              ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon">
+                <i class="fas fa-bars"></i>
+              </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+              <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#nosotros">Guía turística</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="acerca.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="politica.html">Política de Calidad</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <img src="holder.js/1900x400?theme=vine">
           </div>
         </header>
         <!-- texto main -->
@@ -530,6 +531,204 @@
 
               Propietario: ? <br>
               Ubicación: Córdoba
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Tienda San Cipriano</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Spa  y artículos de playa ébano</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Salvavidas y ﬂotadores el cholo. Kits de natación</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Servicio de guia turístico a San Cipriano y Córdoba</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Miscelánea y Variedades Jazmín</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
+              <div class="w-100"></div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/#</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
+            </div>
+          </div>
+        </div>
+        <!-- Div col -->
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Artesanías Macano</h4>
+              <br>
+
+              Propietario: ? <br>
+              Ubicación: San Cipriano
 
               <br>
               <br>
